--- a/prod/package.json
+++ b/prod/package.json
@@ -1,8 +1,12 @@
 {
   "name": "dharmadict",
-	"version": "0.0.1",
-	"dependencies": {
-		"express": "3.2.5",
-		"elasticsearch": "10.1.3"
-	}
+  "version": "0.0.1",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookies": "^0.6.2",
+    "elasticsearch": "10.1.3",
+    "express": "3.2.5",
+    "jsonwebtoken": "^7.1.9",
+    "password-hash": "^1.2.2"
+  }
 }
