--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "btoa": "^1.1.2",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.5.1",
     "redux": "^3.5.1",
