--- a/prod/package.json
+++ b/prod/package.json
@@ -5,7 +5,7 @@
     "body-parser": "^1.15.2",
     "cookies": "^0.6.2",
     "elasticsearch": "10.1.3",
-    "express": "3.2.5",
+    "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "password-hash": "^1.2.2"
   }
