--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.9.2",
     "css-loader": "^0.24.0",
+    "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.18.0",
     "localStorage": "^1.0.3",
     "postcss-focus": "^1.0.0",
@@ -33,6 +34,7 @@
     "standard": "^8.2.0",
     "style-loader": "^0.13.1",
     "surge": "^0.18.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
