--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcryptjs": "^2.3.0",
     "btoa": "^1.1.2",
     "react": "^15.1.0",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.1.0",
     "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
