--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node webpack/server.js",
     "build": "webpack --config webpack/prod.js --progress --colors -p",
-    "deploy": "npm run build && surge -p build -d saga-login-flow.surge.sh"
+    "prod": "node prod/server.js"
   },
   "repository": "dhilt/dharmadict",
   "license": "MIT",
@@ -50,7 +50,6 @@
     "react-router": "^2.5.1",
     "redux": "^3.5.1",
     "redux-logger": "^2.6.1",
-    "redux-saga": "^0.12.0",
     "redux-thunk": "^2.1.0"
   },
   "babel": {
