--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "description": "Dharma Dictionary",
   "scripts": {
-    "start": "node webpack/server.js",
+    "start": "concurrently --kill-others \"npm run dev-server\" \"npm run prod-server\"",
     "build": "webpack --config webpack/prod.js --progress --colors -p",
-    "prod": "node prod/server.js"
+    "dev-server": "node webpack/server.js",
+    "prod-server": "node prod/server.js"
   },
   "repository": "dhilt/dharmadict",
   "license": "MIT",
@@ -20,6 +21,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.9.2",
+    "concurrently": "^3.1.0",
     "css-loader": "^0.24.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.18.0",
