--- a/prod/package.json
+++ b/prod/package.json
@@ -7,6 +7,7 @@
     "elasticsearch": "10.1.3",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
-    "password-hash": "^1.2.2"
+    "password-hash": "^1.2.2",
+    "winston": "^2.3.1"
   }
 }
