--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "concurrently --kill-others \"npm run dev-server\" \"npm run prod-server\"",
     "build": "webpack --config webpack/prod.js --progress --colors -p",
     "dev-server": "node webpack/server.js",
-    "prod-server": "node prod/server.js"
+    "prod-server": "node prod/server.js",
+    "test": "mocha -R spec --bail"
   },
   "repository": "dhilt/dharmadict",
   "license": "MIT",
@@ -21,11 +22,14 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "babel-runtime": "^6.9.2",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "concurrently": "^3.1.0",
     "css-loader": "^0.24.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.18.0",
     "localStorage": "^1.0.3",
+    "mocha": "^3.5.0",
     "postcss-focus": "^1.0.0",
     "postcss-import": "^8.1.1",
     "postcss-loader": "^1.0.0",
