--- a/prod/package.json
+++ b/prod/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "csv-parse": "^1.2.1",
     "elasticsearch": "10.1.3",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
