--- a/prod/package.json
+++ b/prod/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "csv-parse": "^1.2.1",
-    "elasticsearch": "10.1.3",
+    "elasticsearch": "^13.3.1",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
     "password-hash": "^1.2.2",
