--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.1.0",
+    "react-intl": "^2.4.0",
     "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.2",
