--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^0.24.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.18.0",
+    "json-loader": "^0.5.7",
     "localStorage": "^1.0.3",
     "mocha": "^3.5.0",
     "postcss-focus": "^1.0.0",
