--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev-server": "node webpack/server.js",
     "prod-server": "node prod/server.js",
     "test": "mocha -R spec --bail",
+    "test-frontend": "jest",
     "db-reset": "node prod/db/reset.js"
   },
   "repository": {
@@ -31,8 +32,11 @@
     "chai-http": "^3.0.0",
     "concurrently": "^3.1.0",
     "css-loader": "^0.24.0",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-15": "^1.0.1",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.18.0",
+    "jest": "^21.2.1",
     "json-loader": "^0.5.7",
     "localStorage": "^1.0.3",
     "mocha": "^3.5.0",
@@ -41,6 +45,8 @@
     "postcss-loader": "^1.0.0",
     "postcss-reporter": "^2.0.0",
     "postcss-simple-vars": "^3.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^15.6.2",
     "redux-ava": "^2.1.0",
     "snazzy": "^5.0.0",
     "standard": "^8.2.0",
