--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-server": "node webpack/server.js",
     "prod-server": "node prod/server.js",
     "test": "mocha -R spec --bail",
-    "test-frontend": "jest",
+    "test-frontend": "set NODE_ENV=\"test\" && jest --watch",
     "db-reset": "node prod/db/reset.js"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "json-loader": "^0.5.7",
     "localStorage": "^1.0.3",
     "mocha": "^3.5.0",
+    "nock": "^9.0.22",
     "postcss-focus": "^1.0.0",
     "postcss-import": "^8.1.1",
     "postcss-loader": "^1.0.0",
@@ -48,6 +49,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^15.6.2",
     "redux-ava": "^2.1.0",
+    "redux-mock-store": "^1.3.0",
     "snazzy": "^5.0.0",
     "standard": "^8.2.0",
     "style-loader": "^0.13.1",
