--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ava": "^0.16.0",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
+    "babel-plugin-react-remove-properties": "^0.2.5",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
