--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
     "babel-polyfill": "^6.9.1",
     "bcryptjs": "^2.3.0",
     "btoa": "^1.1.2",
-    "react": "^15.1.0",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.1.0",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.30.10",
+    "react-dom": "^15.6.2",
     "react-intl": "^2.4.0",
-    "react-modal": "^1.5.2",
-    "react-redux": "^4.4.5",
+    "react-modal": "^1.9.7",
+    "react-redux": "^4.4.8",
     "react-router": "^3.0.2",
     "redux": "^3.5.1",
     "redux-logger": "^2.6.1",
