--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-test-renderer": "^15.6.2",
     "redux-ava": "^2.1.0",
     "redux-mock-store": "^1.3.0",
+    "sinon": "^4.1.2",
     "snazzy": "^5.0.0",
     "standard": "^8.2.0",
     "style-loader": "^0.13.1",
