--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-runtime": "^6.9.2",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "clean-webpack-plugin": "^0.1.18",
     "concurrently": "^3.1.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.24.0",
