add BEM translations

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "mocha --opts test/backend/mocha.opts -R spec --bail",
     "test-frontend": "cross-env NODE_ENV=test jest --config ./test/frontend/jest.config.json",
     "db-migrate": "node prod/db/migrate.js",
-    "genereate-hash": "node prod/db/scripts/helpers/generatePassword.js"
+    "generate-hash": "node prod/db/scripts/helpers/generatePassword.js"
   },
   "repository": {
     "type": "git",
